<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="30dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_delete_prayer_dialog"
        android:paddingStart="24dp"
        android:paddingTop="26dp"
        android:paddingEnd="24dp"
        android:paddingBottom="22dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_prayer_dialog_title"
            android:textColor="#333333"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/text_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:lineSpacingExtra="1dp"
            android:text="@string/delete_prayer_dialog_message"
            android:textColor="#333333"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/text_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/button_cancel"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="6dp"
            android:background="@drawable/bg_prayer_visible_cancel"
            android:gravity="center"
            android:text="@string/prayer_wall_edit_visible_cancel"
            android:textColor="#666666"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/text_message"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_ok"
            app:layout_constraintHorizontal_weight="1" />

        <TextView
            android:id="@+id/button_ok"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginTop="24dp"
            android:layout_marginStart="6dp"
            android:background="@drawable/bg_prayer_visible_ok"
            android:gravity="center"
            android:text="@string/prayer_wall_edit_visible_ok"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/text_message"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
