<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/back"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:importantForAccessibility="no"
                android:src="@drawable/svg_back"
                app:tint="#333333"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_wall"
                android:textColor="#333333"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingHorizontal="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:clipToPadding="false"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/desc_main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prayer_wall_edit_desc_main"
                    android:textColor="#333333"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/bg_plater_wall_input"
                    android:gravity="center_vertical"
                    android:hint="@string/prayer_wall_edit_hint_name"
                    android:inputType="textCapWords|textPersonName"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="20dp"
                    android:textColor="#333333"
                    android:textColorHint="#999999"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/input_content"
                    android:layout_width="match_parent"
                    android:layout_height="190dp"
                    android:background="@drawable/bg_plater_wall_input"
                    android:gravity="top|start"
                    android:hint="@string/prayer_wall_edit_hint_content"
                    android:inputType="textCapSentences|textMultiLine"
                    android:textColor="#333333"
                    android:textColorHint="#999999"
                    android:textSize="16sp"
                    android:maxHeight="190dp"
                    android:layout_marginTop="16dp"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="20dp" />

                <TextView
                    android:id="@+id/character_limit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textColor="#999999"
                    android:textSize="14sp"
                    android:layout_gravity="end"
                    tools:text="Character limit:0/200" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/row_visible_to"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:clickable="true"
                    android:focusable="true">

                    <ImageView
                        android:id="@+id/icon_visible_to"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:importantForAccessibility="no"
                        android:src="@drawable/svg_user_visible"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/text_visible_to_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:text="@string/prayer_wall_edit_visible_to"
                        android:textColor="#666666"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/icon_visible_to"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/text_visible_to_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="6dp"
                        android:text="@string/prayer_wall_edit_visible_anyone"
                        android:textColor="#999999"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/icon_visible_to_more"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/icon_visible_to_more"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:importantForAccessibility="no"
                        android:src="@drawable/svg_more"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="#EFEFEF" />

                <TextView
                    android:id="@+id/button_continue"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/bg_player_edit_continue_disable"
                    android:gravity="center"
                    android:text="@string/guide_continue"
                    android:textColor="#ffffff"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginTop="58dp"/>

                <TextView
                    android:id="@+id/desc_bottom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:gravity="center"
                    android:text="@string/prayer_wall_edit_desc_sub"
                    android:textColor="#666666"
                    android:textSize="14sp" />

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

