<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bless_bottom_sheet">

    <ImageView
        android:id="@+id/button_cancel"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:importantForAccessibility="no"
        android:src="@drawable/svg_cancel"
        app:layout_constraintBottom_toBottomOf="@id/text_title"        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"/>

    <TextView
        android:id="@+id/text_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/float_window_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#633800"
        android:gravity="center"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/image_bless"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="10dp"
        android:importantForAccessibility="no"
        android:scaleType="centerCrop"
        android:src="@mipmap/img_floating_guide"
        app:layout_constraintTop_toBottomOf="@id/text_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/btn_open"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="@string/go_to_open"
        android:gravity="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="40dp"
        android:background="@drawable/bg_float_window_dialog_btn"
        app:layout_constraintTop_toBottomOf="@id/image_bless"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/float_window_hint"
        android:textSize="12sp"
        android:textColor="#A1A19C"
        android:gravity="center"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintTop_toBottomOf="@id/btn_open"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
